--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
-# Ignore video and audio directories
+# Build directories
+build/
+cmake-build-*/
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Compiled files
+*.o
+*.obj
+*.exe
+*.out
+*.app
+
+# Downloaded files
 video/
 audio/
+
+# Dependencies
+_deps/
+
+# CMake files
+CMakeCache.txt
+CMakeFiles/
+*.cmake
+Makefile
+install_manifest.txt
+
+# System files
+.DS_Store
+Thumbs.db
