--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout code
@@ -26,16 +28,19 @@ jobs:
           cmake ..
           make
 
+      - name: Package artifacts
+        run: |
+          tar -czf yt-snip-linux.tar.gz -C build yt-snip LICENSE README.md
+
       - name: Create Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
           generate_release_notes: true
           files: |
-            build/yt-snip
+            yt-snip-linux.tar.gz
             LICENSE
             README.md
         env:
