--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,16 +5,21 @@ on:
     tags:
       - 'v*' # Trigger on version tags
 
+permissions:
+  contents: write
+  packages: write
+
 jobs:
   build:
     name: Create Release
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+    environment: production
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install dependencies
         run: |
